Assignment1/Code/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "','", "';'", "':'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'::'", "'integer'", 
                     "'float'", "'string'", "'array'", "'of'", "'void'", 
                     "'auto'", "'inhirit'", "'out'", "'function'", "'if'", 
                     "'else'", "'for'", "'while'", "'do'", "'break'", "'continue'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOL", "STRINGLIT", 
                      "LSB", "RSB", "LRB", "RRB", "LCB", "RCB", "DOT", "COMMA", 
                      "SEMI", "COLON", "ASSIGN", "ADDOP", "MINUSOP", "MULOP", 
                      "DIVOP", "MODOP", "NEGAOP", "CONJOP", "DISJOP", "EQUALOP", 
                      "DIFOP", "LESSOP", "LESSEQOP", "GREATOP", "GREATEQOP", 
                      "CONCAT", "INTEGER", "FLOAT", "STRING", "ARRAY", "OF", 
                      "VOID", "AUTO", "INHIRIT", "OUT", "FUNCTION", "IF", 
                      "ELSE", "FOR", "WHILE", "DO", "BREAK", "CONT", "RT", 
                      "ID", "BLOCK_COMMENT", "LINE_COMMENT", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_type = 1
    RULE_vardecl = 2
    RULE_id_list1 = 3
    RULE_id_list2 = 4
    RULE_funcdecl = 5
    RULE_paradecl = 6
    RULE_para_list1 = 7
    RULE_para_list2 = 8
    RULE_para = 9
    RULE_stmts_list = 10
    RULE_stmts = 11
    RULE_assign_stmt = 12
    RULE_assign_lhs = 13
    RULE_if_stmt = 14
    RULE_while_stmt = 15
    RULE_do_stmt = 16
    RULE_bool_expr = 17
    RULE_break_stmt = 18
    RULE_continue_stmt = 19
    RULE_return_stmt = 20
    RULE_call_stmt = 21
    RULE_block_stmt = 22
    RULE_body = 23
    RULE_exp_airth = 24
    RULE_exp_bool = 25
    RULE_exp_str = 26
    RULE_exp_rela = 27
    RULE_exp_ind = 28
    RULE_exp = 29
    RULE_exp1 = 30
    RULE_exp2 = 31
    RULE_exp3 = 32
    RULE_exp4 = 33
    RULE_exp5 = 34
    RULE_exp6 = 35
    RULE_exp7 = 36
    RULE_literals = 37
    RULE_expression_list1 = 38
    RULE_expression_list2 = 39
    RULE_expression = 40

    ruleNames =  [ "program", "var_type", "vardecl", "id_list1", "id_list2", 
                   "funcdecl", "paradecl", "para_list1", "para_list2", "para", 
                   "stmts_list", "stmts", "assign_stmt", "assign_lhs", "if_stmt", 
                   "while_stmt", "do_stmt", "bool_expr", "break_stmt", "continue_stmt", 
                   "return_stmt", "call_stmt", "block_stmt", "body", "exp_airth", 
                   "exp_bool", "exp_str", "exp_rela", "exp_ind", "exp", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "literals", "expression_list1", "expression_list2", "expression" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOL=3
    STRINGLIT=4
    LSB=5
    RSB=6
    LRB=7
    RRB=8
    LCB=9
    RCB=10
    DOT=11
    COMMA=12
    SEMI=13
    COLON=14
    ASSIGN=15
    ADDOP=16
    MINUSOP=17
    MULOP=18
    DIVOP=19
    MODOP=20
    NEGAOP=21
    CONJOP=22
    DISJOP=23
    EQUALOP=24
    DIFOP=25
    LESSOP=26
    LESSEQOP=27
    GREATOP=28
    GREATEQOP=29
    CONCAT=30
    INTEGER=31
    FLOAT=32
    STRING=33
    ARRAY=34
    OF=35
    VOID=36
    AUTO=37
    INHIRIT=38
    OUT=39
    FUNCTION=40
    IF=41
    ELSE=42
    FOR=43
    WHILE=44
    DO=45
    BREAK=46
    CONT=47
    RT=48
    ID=49
    BLOCK_COMMENT=50
    LINE_COMMENT=51
    WS=52
    ERROR_CHAR=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VardeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncdeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 83
                    self.funcdecl()
                    pass


                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.COLON or _la==MT22Parser.ID):
                    break

            self.state = 88
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = MT22Parser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOL) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list1(self):
            return self.getTypedRuleContext(MT22Parser.Id_list1Context,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression_list1(self):
            return self.getTypedRuleContext(MT22Parser.Expression_list1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.id_list1()
            self.state = 93
            self.match(MT22Parser.COLON)
            self.state = 94
            self.var_type()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.ASSIGN:
                self.state = 95
                self.match(MT22Parser.ASSIGN)
                self.state = 96
                self.expression_list1()


            self.state = 99
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list1" ):
                return visitor.visitId_list1(self)
            else:
                return visitor.visitChildren(self)




    def id_list1(self):

        localctx = MT22Parser.Id_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_id_list1)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(MT22Parser.ID)
                self.state = 102
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_list2(self):
            return self.getTypedRuleContext(MT22Parser.Id_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list2" ):
                return visitor.visitId_list2(self)
            else:
                return visitor.visitChildren(self)




    def id_list2(self):

        localctx = MT22Parser.Id_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list2)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(MT22Parser.COMMA)
                self.state = 107
                self.match(MT22Parser.ID)
                self.state = 108
                self.id_list2()
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(MT22Parser.ID)
            self.state = 113
            self.match(MT22Parser.COLON)
            self.state = 114
            self.match(MT22Parser.FUNCTION)
            self.state = 115
            self.var_type()
            self.state = 116
            self.paradecl()
            self.state = 117
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LRB(self):
            return self.getToken(MT22Parser.LRB, 0)

        def para_list1(self):
            return self.getTypedRuleContext(MT22Parser.Para_list1Context,0)


        def RRB(self):
            return self.getToken(MT22Parser.RRB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paradecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadecl" ):
                return visitor.visitParadecl(self)
            else:
                return visitor.visitChildren(self)




    def paradecl(self):

        localctx = MT22Parser.ParadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paradecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MT22Parser.LRB)
            self.state = 120
            self.para_list1()
            self.state = 121
            self.match(MT22Parser.RRB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_list1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self):
            return self.getTypedRuleContext(MT22Parser.ParaContext,0)


        def para_list2(self):
            return self.getTypedRuleContext(MT22Parser.Para_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_para_list1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_list1" ):
                return visitor.visitPara_list1(self)
            else:
                return visitor.visitChildren(self)




    def para_list1(self):

        localctx = MT22Parser.Para_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_list1)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.para()
                self.state = 124
                self.para_list2()
                pass
            elif token in [MT22Parser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def para(self):
            return self.getTypedRuleContext(MT22Parser.ParaContext,0)


        def para_list2(self):
            return self.getTypedRuleContext(MT22Parser.Para_list2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_para_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_list2" ):
                return visitor.visitPara_list2(self)
            else:
                return visitor.visitChildren(self)




    def para_list2(self):

        localctx = MT22Parser.Para_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_para_list2)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(MT22Parser.COMMA)
                self.state = 130
                self.para()
                self.state = 131
                self.para_list2()
                pass
            elif token in [MT22Parser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = MT22Parser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 136
                self.match(MT22Parser.OUT)


            self.state = 139
            self.match(MT22Parser.ID)
            self.state = 140
            self.match(MT22Parser.COLON)
            self.state = 141
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmts_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StmtsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StmtsContext,i)


        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_stmts_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts_list" ):
                return visitor.visitStmts_list(self)
            else:
                return visitor.visitChildren(self)




    def stmts_list(self):

        localctx = MT22Parser.Stmts_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmts_list)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.stmts()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(MT22Parser.LCB)
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 145
                    self.stmts()
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.LCB) | (1 << MT22Parser.IF) | (1 << MT22Parser.WHILE) | (1 << MT22Parser.DO) | (1 << MT22Parser.BREAK) | (1 << MT22Parser.CONT) | (1 << MT22Parser.RT) | (1 << MT22Parser.ID))) != 0)):
                        break

                self.state = 150
                self.match(MT22Parser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MT22Parser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MT22Parser.While_stmtContext,0)


        def do_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Do_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Call_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = MT22Parser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmts)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.while_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 157
                self.do_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.break_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 159
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 160
                self.return_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 161
                self.call_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 162
                self.block_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_lhs(self):
            return self.getTypedRuleContext(MT22Parser.Assign_lhsContext,0)


        def EQUALOP(self):
            return self.getToken(MT22Parser.EQUALOP, 0)

        def expression_list1(self):
            return self.getTypedRuleContext(MT22Parser.Expression_list1Context,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_assign_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = MT22Parser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.assign_lhs()
            self.state = 166
            self.match(MT22Parser.EQUALOP)
            self.state = 167
            self.expression_list1()
            self.state = 168
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_lhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def exp_ind(self):
            return self.getTypedRuleContext(MT22Parser.Exp_indContext,0)


        def getRuleIndex(self):
